@@ -35,7 +35,7 @@ model/ply					ply
 model/shp					shp
 model/step					stp step
 model/stl					stl
-model/vnd.brlcad+binary				g
+model/vnd.brlcad+binary				g brlcad
 model/vnd.brlcad+tcl				asc
 model/vnd.fastgen				bdf fas fg fg4
 model/vnd.gift					cg comgeom
